--- a/estilo.css
+++ b/estilo.css
@@ -25,6 +25,11 @@ body {
     border-radius: 5px;
     
 }
+.list-item{
+    padding: 5px;
+    /*border-bottom: 1px solid rgb(145, 141, 141);*/
+    box-shadow: 0px 0px 1px rgb(44, 43, 43);
+}
 .list-item__img{
     display: flex;
     align-items: center;
