--- a/estilo.css
+++ b/estilo.css
@@ -31,7 +31,7 @@ body {
     box-shadow: 0px 0px 1px rgb(44, 43, 43);
     display: flex;
     align-items: center;
-    gap: 10px;
+    
 }
 /*.list-item__img{
     display: flex;
@@ -46,7 +46,7 @@ body {
     width: 50%;
     border-radius: 100%;
 }*/
-.list-item__email{
+.list-item_content{
     flex-grow: 1;
 }
 .list-item{
@@ -57,7 +57,7 @@ li:hover{
     background-color: #2ac4c4;
 }
 p{
-    line-height: 2px;
+    /*line-height: 2px;*/
     margin-left: 10px;
 }
 a{
@@ -66,4 +66,12 @@ a{
     padding: 5px;
    margin: 0 0 5px 10px;
    
+}
+.name{
+    margin: 0;
+    font-size: 30px;
+}
+.email{
+    margin: 0;
+    font-size: 15px;
 }
